Provide sample filter for logstash

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -9,6 +9,20 @@ input {
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+	# This one collect custom log inside filebeat container.
+	# `foo.log` should look like this:
+	# | a 1 |
+	# | b 2 |
+	# | c 3 |
+	if [log][file][path] == "/var/log/foo.log" {
+		grok {
+			match => {
+				"message" => '%{WORD:key} %{NUMBER:value}'
+			}
+		}
+	}
+}
 
 output {
 	elasticsearch {
