--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,12 @@
 name: Documentation
 
 on:
-  schedule:
-    - cron: '0 0 * * 0'  # At 00:00 every Sunday
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # schedule:
+  #   - cron: '0 0 * * 0'  # At 00:00 every Sunday
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
 
